--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">In the menu recomendation program we made a platform that recommends the foods when you click the butten recommend, P.S. Pasta is made from grain, whitch is the one of the basic food groups in a healthy diet that also can include vegetables, fruits, fish, and poultry. It's a good source of energy and can give you fiber, too, if it's made from whole grain. That can help with stomach problems and may help lower cholesterol.
                                     </p>
-                                    <button class="btn btn-primary" data-bs-dismiss="modal">
-                                        <i class="fas fa-xmark fa-fw"></i>
-                                        Close Window
-                                    </button>
+                                    <a href="https://github.com/kokithepro/food-recommendation"><button class="btn btn-primary" data-bs-dismiss="modal">
+                                        <i class="fa-solid fa-laptop-code"></i>
+                                        Check Code
+                                    </button></a>
                                 </div>
                             </div>
                         </div>
@@ -155,10 +155,10 @@
                                     <img class="img-fluid rounded mb-5" src="Screen Shot 2023-02-22 at 4.02.51 PM.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">This is a color game that we made. Try it out!</p>
-                                    <button class="btn btn-primary" data-bs-dismiss="modal">
-                                        <i class="fas fa-xmark fa-fw"></i>
-                                        Close Window
-                                    </button>
+                                    <a href="https://github.com/kokithepro/Color-game/blob/main/color%20game.py"><button class="btn btn-primary" data-bs-dismiss="modal">
+                                        <i class="fa-solid fa-laptop-code"></i>
+                                        Check Code
+                                    </button></a>
                                 </div>
                             </div>
                         </div>
